--- a/Disruptor/AndroidManifest.xml
+++ b/Disruptor/AndroidManifest.xml
@@ -15,15 +15,16 @@
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name"
             android:theme="@style/AppTheme" >
+
         <activity
-                android:name="MainActivity"
-                android:label="@string/title_activity_main" >
+                android:name="SoundPlayerActivity"
+                android:label="@string/title_activity_soundplayer" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
