--- a/Disruptor/AndroidManifest.xml
+++ b/Disruptor/AndroidManifest.xml
@@ -11,18 +11,23 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-            android:debuggable="true"
+            android:debuggable="false"
             android:theme="@style/AppTheme"
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name">
 
         <activity
-                android:name="ConfigureActivity"
-                android:label="@string/title_activity_configure" >
+                android:theme="@android:style/Theme.NoTitleBar"
+                android:name="SplashActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+                android:name="ConfigureActivity"
+                android:label="@string/title_activity_configure" >
         </activity>
 
         <activity
