--- a/src/app/Disruptor/AndroidManifest.xml
+++ b/src/app/Disruptor/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.theriddlebrothers.disruptor"
           android:versionCode="1"
-          android:versionName="1.0" >
+          android:versionName="1.1" >
 
     <uses-sdk
             android:minSdkVersion="8"
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-            android:debuggable="false"
+            android:debuggable="true"
             android:theme="@style/AppTheme"
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name">
